import org.codehaus.groovy.runtime.GStringImpl

project.ext {
    gradleDir = "${project(':').rootDir}/gradle" as GStringImpl
}
apply plugin: 'java'
apply plugin: 'idea'

compileJava.options.encoding = 'UTF-8'

//noinspection GroovyUnusedAssignment
targetCompatibility = JavaVersion.VERSION_1_10

//noinspection GroovyUnusedAssignment
sourceCompatibility = JavaVersion.VERSION_1_10

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url('https://mvnrepository.com/artifact/ch.qos.logback/logback-classic')
        }
    }

    dependencies {
        compile 'commons-io:commons-io:2.6'
        compile 'joda-time:joda-time:2.9.3'
        compile 'ch.qos.logback:logback-classic:1.2.3'
        testCompile 'junit:junit:4.12'
        testCompile 'org.hamcrest:hamcrest-all:1.3'
        testCompile 'org.mockito:mockito-core:2.17.0'
        testCompile 'org.assertj:assertj-core:3.9.1'

    }

}
